- **PYDANTIC SCHEMA FIX**: Fixed datetime validation errors in ConnectorProfileOut schema by changing created_at and next_run_at from string to datetime types to match database model.
- **UNIT TEST FIX**: Fixed mock database in unit tests to provide proper datetime values instead of None for created_at field, resolving Pydantic validation errors.
- Moved all previous migrations to `backup/migrations/versions/` for reference.
- This eliminates migration chain complexity since there's no production database to maintain.
- Single migration includes: organizations, users, credentials, connector profiles, sync runs, destination targets, audit logging, and RLS policies.
- All operations are now safe to run multiple times and will rollback completely on any failure.
- Fixed migration dependency issues that were causing CI failures.

## 2025-08-04 (0.1.3)
- Moved devcontainer to custom Dockerfile (`.devcontainer/Dockerfile`) based on `python:3.11-bullseye`.
- Dockerfile installs common CLI tools and creates `vscode` user with password-less sudo to ensure VS Code Remote Containers works correctly.
- `devcontainer.json` now uses the Dockerfile build and removes the empty `features` section.

## 2025-08-04 (0.2.0)
- Project bootstrap: add Poetry `pyproject.toml`, FastAPI `backend` package with health endpoint, authentication interfaces & stub `DbAuthProvider`.
- Extracted Onyx connector runtime already available under `connectors/onyx` and linked as editable dependency.

## 2025-08-04 (0.3.0)
- Added initial database layer using SQLAlchemy async: base, session, and core models (`Organization`, `User`, `UserToken`).
- Introduced stub `shared_configs.contextvars` to satisfy connector runtime imports without referencing `LegacyCode`.

## 2025-08-04 (0.4.0)
- Added Pydantic `Settings` for configuration.
- Implemented secure password hashing utilities.
- Refactored `DbAuthProvider` to support async Postgres backend while retaining in-memory fallback.